--- a/PositionLogger/Base.lproj/Main.storyboard
+++ b/PositionLogger/Base.lproj/Main.storyboard
@@ -97,17 +97,24 @@
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWL-Q2-9ES">
                                 <rect key="frame" x="251" y="100" width="51" height="31"/>
                             </switch>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lW2-ZV-tmq">
+                                <rect key="frame" x="77" y="465" width="155" height="30"/>
+                                <state key="normal" title="Real Time Exercise"/>
+                                <connections>
+                                    <segue destination="pew-l7-Fag" kind="modal" id="Oiv-qn-3ib"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Y5k-D9-7VR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0Lc-dX-GLD"/>
-                            <constraint firstItem="jNZ-UQ-NGD" firstAttribute="top" secondItem="AQN-T1-kYl" secondAttribute="bottom" constant="51" id="1Gw-wh-xYi"/>
                             <constraint firstAttribute="trailing" secondItem="jNZ-UQ-NGD" secondAttribute="trailing" id="2S3-z4-iPP"/>
                             <constraint firstItem="3ZX-d9-vg4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="6Lq-Sk-1Ha"/>
                             <constraint firstItem="xbk-aA-aGR" firstAttribute="centerY" secondItem="3ZX-d9-vg4" secondAttribute="centerY" id="6aT-c8-Huc"/>
                             <constraint firstItem="ZFo-aY-i2m" firstAttribute="trailing" secondItem="gUb-jQ-7wN" secondAttribute="trailing" id="9L1-lz-6UT"/>
                             <constraint firstItem="xbk-aA-aGR" firstAttribute="leading" secondItem="3ZX-d9-vg4" secondAttribute="trailing" constant="2" id="A9B-re-IXy"/>
                             <constraint firstItem="gUb-jQ-7wN" firstAttribute="top" secondItem="xbk-aA-aGR" secondAttribute="bottom" constant="47" id="Dcl-yE-GJv"/>
+                            <constraint firstItem="lW2-ZV-tmq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FA7-id-nGL"/>
                             <constraint firstItem="YwT-aj-8x4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IsT-Tl-PgM"/>
                             <constraint firstItem="YwT-aj-8x4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LYk-gf-bdx"/>
                             <constraint firstItem="gUb-jQ-7wN" firstAttribute="centerX" secondItem="xbk-aA-aGR" secondAttribute="centerX" id="OQe-zw-bZ1"/>
@@ -119,6 +126,7 @@
                             <constraint firstItem="ZFo-aY-i2m" firstAttribute="leading" secondItem="gUb-jQ-7wN" secondAttribute="leading" id="ddG-4h-fZV"/>
                             <constraint firstItem="YwT-aj-8x4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="geB-g6-P9J"/>
                             <constraint firstItem="YwT-aj-8x4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="hAR-qk-uNR"/>
+                            <constraint firstItem="jNZ-UQ-NGD" firstAttribute="top" secondItem="AQN-T1-kYl" secondAttribute="bottom" constant="51" id="j6X-hg-JeJ"/>
                             <constraint firstItem="Uc5-QJ-BRF" firstAttribute="leading" secondItem="jNZ-UQ-NGD" secondAttribute="leading" id="jbW-VB-Iqm"/>
                             <constraint firstItem="Uc5-QJ-BRF" firstAttribute="trailing" secondItem="jNZ-UQ-NGD" secondAttribute="trailing" id="sWd-9G-xvF"/>
                             <constraint firstItem="ZFo-aY-i2m" firstAttribute="top" secondItem="gUb-jQ-7wN" secondAttribute="bottom" constant="8" id="t8g-k6-Fkx"/>
@@ -130,11 +138,64 @@
                         <outlet property="includeExercise" destination="eWL-Q2-9ES" id="bKV-OX-GOS"/>
                         <outlet property="recordingIndicator" destination="3ZX-d9-vg4" id="B6X-jG-uxl"/>
                         <outlet property="startStopButton" destination="xbk-aA-aGR" id="obg-bV-Fvx"/>
+                        <outlet property="transitionButton" destination="lW2-ZV-tmq" id="pxD-BE-7vd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="162" y="357"/>
+        </scene>
+        <!--Exercise Analysis View Controller-->
+        <scene sceneID="NcM-AT-Khv">
+            <objects>
+                <viewController id="pew-l7-Fag" customClass="ExerciseAnalysisViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SBF-YH-e5O"/>
+                        <viewControllerLayoutGuide type="bottom" id="3RE-pb-UrY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LMg-Bj-blC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Workout Activity Recognizer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XVx-JE-DWM">
+                                <rect key="frame" x="45" y="28" width="220" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kv4-me-ADG">
+                                <rect key="frame" x="201" y="82" width="99" height="30"/>
+                                <state key="normal" title="End Exercise"/>
+                                <connections>
+                                    <action selector="endExercise:" destination="pew-l7-Fag" eventType="touchUpInside" id="Lju-Q4-h1t"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cet-vp-JCR">
+                                <rect key="frame" x="25" y="82" width="107" height="30"/>
+                                <state key="normal" title="Start Exercise"/>
+                                <connections>
+                                    <action selector="startExercise:" destination="pew-l7-Fag" eventType="touchUpInside" id="Mb1-i6-IpS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XVx-JE-DWM" firstAttribute="centerX" secondItem="LMg-Bj-blC" secondAttribute="centerX" id="57s-AR-ZBN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kv4-me-ADG" secondAttribute="trailing" id="bxR-kV-ziM"/>
+                            <constraint firstItem="kv4-me-ADG" firstAttribute="top" secondItem="XVx-JE-DWM" secondAttribute="bottom" constant="32" id="eIO-ee-0eR"/>
+                            <constraint firstItem="cet-vp-JCR" firstAttribute="leading" secondItem="LMg-Bj-blC" secondAttribute="leadingMargin" constant="5" id="lnG-lA-pxJ"/>
+                            <constraint firstItem="cet-vp-JCR" firstAttribute="top" secondItem="XVx-JE-DWM" secondAttribute="bottom" constant="32" id="ypl-hS-AYY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="hXI-fq-9XD"/>
+                    <connections>
+                        <outlet property="endExerciseButton" destination="kv4-me-ADG" id="wkq-db-ik1"/>
+                        <outlet property="startExerciseButton" destination="cet-vp-JCR" id="ahy-of-ikk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WD9-b3-7ID" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="162" y="979"/>
         </scene>
     </scenes>
 </document>
